exports[`Find statement > #0: generates statements for Article 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"status\\",",
    "    \`articles\`.\`status\`,",
    "    \\"title\\",",
    "    \`articles\`.\`title\`,",
    "    \\"body\\",",
    "    \`articles\`.\`body\`,",
    "    \\"views\\",",
    "    \`articles\`.\`views\`,",
    "    \\"score\\",",
    "    \`articles\`.\`score\`,",
    "    \\"machineTags\\",",
    "    \`articles\`.\`machine_tags\`,",
    "    \\"metas\\",",
    "    \`articles\`.\`metas\`,",
    "    \\"tagCount\\",",
    "    (",
    "      SELECT COUNT(*)",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    ),",
    "    \\"createdAt\\",",
    "    \`articles\`.\`created_at\`,",
    "    \\"a\\",",
    "    JSON_OBJECT(",
    "      \\"status\\",",
    "      \`articles\`.\`status\`,",
    "      \\"title\\",",
    "      \`articles\`.\`title\`,",
    "      \\"category\\",",
    "      IF(",
    "        \`articles>category\`.\`private_id\` IS NOT NULL,",
    "        JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "        NULL",
    "      )",
    "    ),",
    "    \\"b\\",",
    "    JSON_OBJECT(",
    "      \\"status\\",",
    "      \`articles\`.\`status\`,",
    "      \\"title\\",",
    "      \`articles\`.\`title\`,",
    "      \\"category\\",",
    "      IF(",
    "        \`articles>category\`.\`private_id\` IS NOT NULL,",
    "        JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "        NULL",
    "      )",
    "    ),",
    "    \\"upperCasedTitle\\",",
    "    JSON_OBJECT(",
    "      \\"status\\",",
    "      \`articles\`.\`status\`,",
    "      \\"title\\",",
    "      \`articles\`.\`title\`,",
    "      \\"category\\",",
    "      IF(",
    "        \`articles>category\`.\`private_id\` IS NOT NULL,",
    "        JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "        NULL",
    "      ),",
    "      \\"tags\\",",
    "      (",
    "        SELECT JSON_ARRAYAGG(",
    "            JSON_OBJECT(",
    "              \\"tag\\",",
    "              JSON_OBJECT(\\"title\\", \`articles>tags>tag\`.\`title\`)",
    "            )",
    "            ORDER BY \`articles>tags\`.\`order\` ASC",
    "            LIMIT 2",
    "          )",
    "        FROM \`article_tags\` AS \`articles>tags\`",
    "          INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "        WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "      )",
    "    ),",
    "    \\"c\\",",
    "    JSON_OBJECT(",
    "      \\"lowerCasedTitle\\",",
    "      JSON_OBJECT(",
    "        \\"status\\",",
    "        \`articles\`.\`status\`,",
    "        \\"title\\",",
    "        \`articles\`.\`title\`,",
    "        \\"category\\",",
    "        IF(",
    "          \`articles>category\`.\`private_id\` IS NOT NULL,",
    "          JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "          NULL",
    "        )",
    "      ),",
    "      \\"upperCasedTitle\\",",
    "      JSON_OBJECT(",
    "        \\"status\\",",
    "        \`articles\`.\`status\`,",
    "        \\"title\\",",
    "        \`articles\`.\`title\`,",
    "        \\"category\\",",
    "        IF(",
    "          \`articles>category\`.\`private_id\` IS NOT NULL,",
    "          JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "          NULL",
    "        ),",
    "        \\"tags\\",",
    "        (",
    "          SELECT JSON_ARRAYAGG(",
    "              JSON_OBJECT(",
    "                \\"tag\\",",
    "                JSON_OBJECT(\\"title\\", \`articles>tags>tag\`.\`title\`)",
    "              )",
    "              ORDER BY \`articles>tags\`.\`order\` ASC",
    "              LIMIT 2",
    "            )",
    "          FROM \`article_tags\` AS \`articles>tags\`",
    "            INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "          WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "        )",
    "      )",
    "    ),",
    "    \\"d\\",",
    "    JSON_OBJECT(",
    "      \\"lowerCasedTitle\\",",
    "      JSON_OBJECT(",
    "        \\"status\\",",
    "        \`articles\`.\`status\`,",
    "        \\"title\\",",
    "        \`articles\`.\`title\`,",
    "        \\"category\\",",
    "        IF(",
    "          \`articles>category\`.\`private_id\` IS NOT NULL,",
    "          JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "          NULL",
    "        )",
    "      ),",
    "      \\"upperCasedTitle\\",",
    "      JSON_OBJECT(",
    "        \\"status\\",",
    "        \`articles\`.\`status\`,",
    "        \\"title\\",",
    "        \`articles\`.\`title\`,",
    "        \\"category\\",",
    "        IF(",
    "          \`articles>category\`.\`private_id\` IS NOT NULL,",
    "          JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "          NULL",
    "        ),",
    "        \\"tags\\",",
    "        (",
    "          SELECT JSON_ARRAYAGG(",
    "              JSON_OBJECT(",
    "                \\"tag\\",",
    "                JSON_OBJECT(\\"title\\", \`articles>tags>tag\`.\`title\`)",
    "              )",
    "              ORDER BY \`articles>tags\`.\`order\` ASC",
    "              LIMIT 2",
    "            )",
    "          FROM \`article_tags\` AS \`articles>tags\`",
    "            INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "          WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "        )",
    "      )",
    "    )",
    "  ) as \`_Article\`",
    "FROM \`articles\`",
    "  LEFT JOIN \`categories\` AS \`articles>category\` ON \`articles\`.\`category_private_id\` = \`articles>category\`.\`private_id\`",
    "WHERE \`articles\`.\`status\` = 'published'",
    "ORDER BY \`articles\`.\`created_at\` ASC",
    "LIMIT 5"
  ]
]
`;

exports[`Find statement > #1: generates statements for Article 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"status\\",",
    "    \`articles\`.\`status\`,",
    "    \\"title\\",",
    "    \`articles\`.\`title\`",
    "  ) as \`_Article\`",
    "FROM \`articles\`",
    "ORDER BY \`articles\`.\`created_at\` ASC",
    "LIMIT 5"
  ]
]
`;

exports[`Find statement > #2: generates statements for Article 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"title\\",",
    "    \`articles\`.\`title\`,",
    "    \\"category\\",",
    "    IF(",
    "      \`articles\`.\`category_private_id\` IS NOT NULL,",
    "      JSON_OBJECT(\\"_id\\", \`articles\`.\`category_private_id\`),",
    "      NULL",
    "    )",
    "  ) as \`_Article\`",
    "FROM \`articles\`",
    "WHERE NOT \`articles\`.\`category_private_id\` IS NOT NULL",
    "LIMIT 5"
  ]
]
`;

exports[`Find statement > #3: generates statements for Article 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"title\\",",
    "    \`articles\`.\`title\`,",
    "    \\"category\\",",
    "    IF(",
    "      \`articles\`.\`category_private_id\` IS NOT NULL,",
    "      JSON_OBJECT(\\"_id\\", \`articles\`.\`category_private_id\`),",
    "      NULL",
    "    )",
    "  ) as \`_Article\`",
    "FROM \`articles\`",
    "WHERE (",
    "    \`articles\`.\`category_private_id\` IS NOT NULL",
    "    AND \`articles\`.\`category_private_id\` <=> 5",
    "  )",
    "LIMIT 5"
  ]
]
`;

exports[`Find statement > #4: generates statements for Article 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"status\\",",
    "    \`articles\`.\`status\`,",
    "    \\"title\\",",
    "    \`articles\`.\`title\`,",
    "    \\"category\\",",
    "    IF(",
    "      \`articles>category\`.\`private_id\` IS NOT NULL,",
    "      JSON_OBJECT(\\"title\\", \`articles>category\`.\`title\`),",
    "      NULL",
    "    ),",
    "    \\"createdBy\\",",
    "    IF(",
    "      \`articles>createdBy\`.\`id\` IS NOT NULL,",
    "      JSON_OBJECT(",
    "        \\"username\\",",
    "        \`articles>createdBy\`.\`username\`,",
    "        \\"profile\\",",
    "        (",
    "          SELECT JSON_OBJECT(",
    "              \\"facebookId\\",",
    "              \`articles>createdBy>profile\`.\`facebook_id\`,",
    "              \\"googleId\\",",
    "              \`articles>createdBy>profile\`.\`google_id\`,",
    "              \\"twitterHandle\\",",
    "              \`articles>createdBy>profile\`.\`twitter_handle\`",
    "            )",
    "          FROM \`user_profiles\` AS \`articles>createdBy>profile\`",
    "          WHERE \`articles>createdBy>profile\`.\`theUserId\` = \`articles>createdBy\`.\`id\`",
    "          LIMIT 1",
    "        )",
    "      ), NULL",
    "    ),",
    "    \\"allTagCount\\",",
    "    (",
    "      SELECT COUNT(*)",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    ),",
    "    \\"filteredTagCount\\",",
    "    (",
    "      SELECT COUNT(*)",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "        INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "        AND NOT \`articles>tags>tag\`.\`deprecated\` <=> 1",
    "    ),",
    "    \\"allTags\\",",
    "    (",
    "      SELECT JSON_ARRAYAGG(",
    "          JSON_OBJECT(",
    "            \\"order\\",",
    "            \`articles>tags\`.\`order\`,",
    "            \\"tag\\",",
    "            JSON_OBJECT(",
    "              \\"title\\",",
    "              \`articles>tags>tag\`.\`title\`,",
    "              \\"deprecated\\",",
    "              \`articles>tags>tag\`.\`deprecated\`",
    "            )",
    "          )",
    "          ORDER BY \`articles>tags\`.\`order\` ASC",
    "          LIMIT 5",
    "        )",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "        INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    ),",
    "    \\"filteredTags\\",",
    "    (",
    "      SELECT JSON_ARRAYAGG(",
    "          JSON_OBJECT(",
    "            \\"order\\",",
    "            \`articles>tags\`.\`order\`,",
    "            \\"tag\\",",
    "            JSON_OBJECT(\\"title\\", \`articles>tags>tag\`.\`title\`)",
    "          )",
    "          ORDER BY \`articles>tags\`.\`order\` ASC",
    "          LIMIT 5",
    "        )",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "        INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "        AND NOT \`articles>tags>tag\`.\`deprecated\` <=> 1",
    "    )",
    "  ) as \`_Article\`",
    "FROM \`articles\`",
    "  LEFT JOIN \`categories\` AS \`articles>category\` ON \`articles\`.\`category_private_id\` = \`articles>category\`.\`private_id\`",
    "  LEFT JOIN \`users\` AS \`articles>createdBy\` ON \`articles\`.\`created_by_id\` = \`articles>createdBy\`.\`id\`",
    "WHERE (",
    "    \`articles\`.\`status\` = 'published'",
    "    AND (",
    "      \`articles\`.\`category_private_id\` IS NOT NULL",
    "      AND \`articles>category\`.\`slug\` = 'tv'",
    "    )",
    "    AND (",
    "      \`articles\`.\`created_by_id\` IS NOT NULL",
    "      AND EXISTS (",
    "        SELECT *",
    "        FROM \`user_profiles\` AS \`articles>createdBy>profile\`",
    "        WHERE \`articles>createdBy>profile\`.\`theUserId\` = \`articles>createdBy\`.\`id\`",
    "          AND (",
    "            \`articles>createdBy>profile\`.\`facebook_id\` IS NOT NULL",
    "            OR \`articles>createdBy>profile\`.\`google_id\` IS NOT NULL",
    "            OR \`articles>createdBy>profile\`.\`twitter_handle\` IS NOT NULL",
    "          )",
    "        LIMIT 1",
    "      )",
    "    )",
    "    AND \`articles\`.\`created_at\` >= '2022-01-01 00:00:00.000'",
    "    AND EXISTS (",
    "      SELECT *",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "        INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "        AND (",
    "          \`articles>tags>tag\`.\`deprecated\` IS NULL",
    "          OR \`articles>tags>tag\`.\`deprecated\` != 1",
    "        )",
    "    )",
    "    AND (",
    "      SELECT COUNT(*)",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    ) > 5",
    "    AND (",
    "      \`articles\`.\`body\` IS NULL",
    "      OR JSON_SEARCH(",
    "        \`articles\`.\`body\`,",
    "        'one',",
    "        '%my searched text here%',",
    "        NULL,",
    "        '$.blocks[*].text'",
    "      ) IS NOT NULL",
    "      OR JSON_SEARCH(",
    "        \`articles\`.\`body\`,",
    "        'one',",
    "        'my starting text here%',",
    "        NULL,",
    "        '$.blocks[0].text'",
    "      ) IS NOT NULL",
    "      OR JSON_SEARCH(",
    "        \`articles\`.\`body\`,",
    "        'one',",
    "        '%my ending text here',",
    "        NULL,",
    "        '$.blocks[last].text'",
    "      ) IS NOT NULL",
    "    )",
    "  )",
    "ORDER BY \`articles\`.\`created_at\` ASC",
    "LIMIT 5"
  ]
]
`;

exports[`Find statement > #5: generates statements for Article 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"title\\",",
    "    \`articles\`.\`title\`,",
    "    \\"second\\",",
    "    (",
    "      SELECT JSON_ARRAYAGG(",
    "          JSON_OBJECT(\\"order\\", \`articles>tags\`.\`order\`)",
    "          ORDER BY \`articles>tags\`.\`order\` ASC",
    "          LIMIT 1 OFFSET 1",
    "        )",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    ),",
    "    \\"penultimate\\",",
    "    (",
    "      SELECT JSON_ARRAYAGG(",
    "          JSON_OBJECT(\\"order\\", \`articles>tags\`.\`order\`)",
    "          ORDER BY \`articles>tags\`.\`order\` DESC",
    "          LIMIT 1 OFFSET 1",
    "        )",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    ),",
    "    \\"all\\",",
    "    (",
    "      SELECT JSON_ARRAYAGG(",
    "          JSON_OBJECT(\\"order\\", \`articles>tags\`.\`order\`)",
    "          ORDER BY \`articles>tags\`.\`order\` ASC",
    "          LIMIT 10",
    "        )",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    )",
    "  ) as \`_Article\`",
    "FROM \`articles\`",
    "WHERE (",
    "    SELECT COUNT(*)",
    "    FROM \`article_tags\` AS \`articles>tags\`",
    "    WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "  ) > 1",
    "ORDER BY \`articles\`.\`created_at\` ASC",
    "LIMIT 1"
  ]
]
`;

exports[`Find statement > #6: generates statements for Article 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"title\\",",
    "    \`articles\`.\`title\`,",
    "    \\"tags\\",",
    "    (",
    "      SELECT JSON_ARRAYAGG(",
    "          JSON_OBJECT(",
    "            \\"tag\\",",
    "            JSON_OBJECT(\\"deprecated\\", \`articles>tags>tag\`.\`deprecated\`)",
    "          )",
    "          ORDER BY \`articles>tags\`.\`order\` ASC",
    "          LIMIT 10",
    "        )",
    "      FROM \`article_tags\` AS \`articles>tags\`",
    "        INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "      WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "    )",
    "  ) as \`_Article\`",
    "FROM \`articles\`",
    "WHERE NOT EXISTS (",
    "    SELECT *",
    "    FROM \`article_tags\` AS \`articles>tags\`",
    "      INNER JOIN \`tags\` AS \`articles>tags>tag\` ON \`articles>tags\`.\`tag_id\` = \`articles>tags>tag\`.\`id\`",
    "    WHERE \`articles>tags\`.\`article_private_id\` = \`articles\`.\`private_id\`",
    "      AND NOT \`articles>tags>tag\`.\`deprecated\` <=> 1",
    "  )",
    "LIMIT 5"
  ]
]
`;

exports[`Find statement > #7: generates statements for Category 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"title\\",",
    "    \`categories\`.\`title\`,",
    "    \\"childCount\\",",
    "    (",
    "      SELECT COUNT(*)",
    "      FROM \`categories\` AS \`categories>children\`",
    "      WHERE \`categories>children\`.\`parent_private_id\` = \`categories\`.\`private_id\`",
    "    ),",
    "    \\"children\\",",
    "    (",
    "      SELECT JSON_ARRAYAGG(",
    "          JSON_OBJECT(",
    "            \\"parent\\",",
    "            IF(",
    "              \`categories>children>parent\`.\`private_id\` IS NOT NULL,",
    "              JSON_OBJECT(\\"title\\", \`categories>children>parent\`.\`title\`),",
    "              NULL",
    "            ),",
    "            \\"title\\",",
    "            \`categories>children\`.\`title\`",
    "          )",
    "          LIMIT 10",
    "        )",
    "      FROM \`categories\` AS \`categories>children\`",
    "        LEFT JOIN \`categories\` AS \`categories>children>parent\` ON \`categories>children\`.\`parent_private_id\` = \`categories>children>parent\`.\`private_id\`",
    "      WHERE \`categories>children\`.\`parent_private_id\` = \`categories\`.\`private_id\`",
    "    )",
    "  ) as \`_Category\`",
    "FROM \`categories\`",
    "WHERE NOT \`categories\`.\`parent_private_id\` IS NOT NULL",
    "LIMIT 1"
  ]
]
`;

exports[`Find statement > #8: generates statements for ArticleTagModeration 1`] = `
[
  [
    "SELECT JSON_OBJECT(",
    "    \\"moderation\\",",
    "    \`article_tag_moderations\`.\`moderation\`,",
    "    \\"articleTag\\",",
    "    JSON_OBJECT(",
    "      \\"article\\",",
    "      JSON_OBJECT(",
    "        \\"_id\\",",
    "        \`article_tag_moderations\`.\`theArticlePrivateId\`",
    "      ),",
    "      \\"tag\\",",
    "      JSON_OBJECT(\\"id\\", \`article_tag_moderations\`.\`theTagId\`)",
    "    )",
    "  ) as \`_ArticleTagModeration\`",
    "FROM \`article_tag_moderations\`",
    "WHERE (",
    "    (",
    "      \`article_tag_moderations\`.\`theArticlePrivateId\` = 5",
    "      AND \`article_tag_moderations\`.\`theTagId\` = '5d6e37f3-0416-4f4a-a405-66b67cc590b9'",
    "    )",
    "    AND \`article_tag_moderations\`.\`moderation\` IS NOT NULL",
    "  )",
    "LIMIT 1"
  ]
]
`;
